<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Horoscope</string>
    <string-array name="signs">
        <item>Aries</item>
        <item>Taurus</item>
        <item>Gemini</item>
        <item>Cancer</item>
        <item>Leo</item>
        <item>Virgo</item>
        <item>Libra</item>
        <item>Scorpio</item>
        <item>Sagittarius</item>
        <item>Capricorn</item>
        <item>Aquarius</item>
        <item>Pisces</item>
    </string-array>
    <string name="copy">Copy to clipboard</string>
    <string name="cache">Put to cache</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="save">Save horoscope</string>
    <string name="save_this">Save this horoscope</string>
    <string name="back">Back</string>
    <string name="aries">Овен</string>
    <string name="loading">Loading horoscopes</string>
    <string name="copyright">Created by Viacheslav Okolitiy</string>
    <string name="license">Apache 2.0 license</string>
    <string name="send_feedback">Send feedback</string>
</resources>
