<menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/week"
         android:title="@string/week"
         android:checked="false"
         android:checkable="true"
         android:enabled="true"
         android:visible="true">
     </item>
     <item
        android:id="@+id/month"
        android:title="@string/month"
        android:checked="false"
        android:checkable="true"
        android:enabled="true"
        android:visible="true">
     </item>
     <item
         android:id="@+id/year"
         android:title="@string/year"
         android:checked="false"
         android:checkable="true"
         android:enabled="true"
         android:visible="true">
     </item>
     <item
         android:id="@+id/save"
         android:title="@string/save"
         android:checkable="true"
         android:checked="false"
         android:enabled="true"
         android:visible="true">
     </item>
     <item
         android:id="@+id/toClipboard"
         android:title="@string/copy"
         android:checkable="true"
         android:enabled="true"
         android:checked="false"
         android:visible="true">
     </item>
</menu>