<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">
    <TextView
        android:id="@+id/copyright"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/copyright"
        android:textAppearance="?android:attr/textAppearanceMedium"/>
    <TextView
        android:id="@+id/license"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/license"
        android:textAppearance="?android:attr/textAppearanceMedium"/>
    <Button
        android:id="@+id/feedbackButton"
        android:layout_width="fill_parent"
        android:text="@string/send_feedback"
        android:layout_height="wrap_content"/>
</LinearLayout>